--- a/composer.json
+++ b/composer.json
@@ -26,8 +26,14 @@
     },
 	"extra": {
         "config-plugin": {
-            "console": "src/config/console.php",
-            "web": "src/config/web.php"
+            "console": [
+                "src/config/common.php",
+                "src/config/console.php"
+            ],
+            "web": [
+                "src/config/common.php",
+                "src/config/web.php",
+            ]
         }
     }
 }
